src/Bluetooth/Raw/HciLib.hs

{-# LINE 1 "src/Bluetooth/Raw/HciLib.hsc" #-}
{-# OPTIONS_GHC -fno-warn-unused-imports #-}
{-# LINE 2 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 3 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 4 "src/Bluetooth/Raw/HciLib.hsc" #-}
module Bluetooth.Raw.HciLib where
import Foreign.Ptr
import Foreign.Ptr (Ptr,FunPtr,plusPtr)
import Foreign.Ptr (wordPtrToPtr,castPtrToFunPtr)
import Foreign.Storable
import Foreign.C.Types
import Foreign.C.String (CString,CStringLen,CWString,CWStringLen)
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Array (peekArray,pokeArray)
import Data.Int
import Data.Word

{-# LINE 7 "src/Bluetooth/Raw/HciLib.hsc" #-}

import Bluetooth.Raw.Bluetooth
import Bluetooth.Raw.Hci
{- struct hci_request {
    uint16_t ogf;
    uint16_t ocf;
    int event;
    void * cparam;
    int clen;
    void * rparam;
    int rlen;
}; -}

{-# LINE 20 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 21 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 22 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 23 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 24 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 25 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 26 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 27 "src/Bluetooth/Raw/HciLib.hsc" #-}
data C'hci_request = C'hci_request{
  c'hci_request'ogf :: CUShort,
  c'hci_request'ocf :: CUShort,
  c'hci_request'event :: CInt,
  c'hci_request'cparam :: Ptr (),
  c'hci_request'clen :: CInt,
  c'hci_request'rparam :: Ptr (),
  c'hci_request'rlen :: CInt
} deriving (Eq,Show)
p'hci_request'ogf p = plusPtr p 0
p'hci_request'ogf :: Ptr (C'hci_request) -> Ptr (CUShort)
p'hci_request'ocf p = plusPtr p 2
p'hci_request'ocf :: Ptr (C'hci_request) -> Ptr (CUShort)
p'hci_request'event p = plusPtr p 4
p'hci_request'event :: Ptr (C'hci_request) -> Ptr (CInt)
p'hci_request'cparam p = plusPtr p 8
p'hci_request'cparam :: Ptr (C'hci_request) -> Ptr (Ptr ())
p'hci_request'clen p = plusPtr p 16
p'hci_request'clen :: Ptr (C'hci_request) -> Ptr (CInt)
p'hci_request'rparam p = plusPtr p 24
p'hci_request'rparam :: Ptr (C'hci_request) -> Ptr (Ptr ())
p'hci_request'rlen p = plusPtr p 32
p'hci_request'rlen :: Ptr (C'hci_request) -> Ptr (CInt)
instance Storable C'hci_request where
  sizeOf _ = 40
  alignment _ = 8
  peek p = do
    v0 <- peekByteOff p 0
    v1 <- peekByteOff p 2
    v2 <- peekByteOff p 4
    v3 <- peekByteOff p 8
    v4 <- peekByteOff p 16
    v5 <- peekByteOff p 24
    v6 <- peekByteOff p 32
    return $ C'hci_request v0 v1 v2 v3 v4 v5 v6
  poke p (C'hci_request v0 v1 v2 v3 v4 v5 v6) = do
    pokeByteOff p 0 v0
    pokeByteOff p 2 v1
    pokeByteOff p 4 v2
    pokeByteOff p 8 v3
    pokeByteOff p 16 v4
    pokeByteOff p 24 v5
    pokeByteOff p 32 v6
    return ()

{-# LINE 28 "src/Bluetooth/Raw/HciLib.hsc" #-}
{- struct hci_version {
    uint16_t manufacturer;
    uint8_t hci_ver;
    uint16_t hci_rev;
    uint8_t lmp_ver;
    uint16_t lmp_subver;
}; -}

{-# LINE 36 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 37 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 38 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 39 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 40 "src/Bluetooth/Raw/HciLib.hsc" #-}

{-# LINE 41 "src/Bluetooth/Raw/HciLib.hsc" #-}
data C'hci_version = C'hci_version{
  c'hci_version'manufacturer :: CUShort,
  c'hci_version'hci_ver :: CUChar,
  c'hci_version'hci_rev :: CUShort,
  c'hci_version'lmp_ver :: CUChar,
  c'hci_version'lmp_subver :: CUShort
} deriving (Eq,Show)
p'hci_version'manufacturer p = plusPtr p 0
p'hci_version'manufacturer :: Ptr (C'hci_version) -> Ptr (CUShort)
p'hci_version'hci_ver p = plusPtr p 2
p'hci_version'hci_ver :: Ptr (C'hci_version) -> Ptr (CUChar)
p'hci_version'hci_rev p = plusPtr p 4
p'hci_version'hci_rev :: Ptr (C'hci_version) -> Ptr (CUShort)
p'hci_version'lmp_ver p = plusPtr p 6
p'hci_version'lmp_ver :: Ptr (C'hci_version) -> Ptr (CUChar)
p'hci_version'lmp_subver p = plusPtr p 8
p'hci_version'lmp_subver :: Ptr (C'hci_version) -> Ptr (CUShort)
instance Storable C'hci_version where
  sizeOf _ = 10
  alignment _ = 2
  peek p = do
    v0 <- peekByteOff p 0
    v1 <- peekByteOff p 2
    v2 <- peekByteOff p 4
    v3 <- peekByteOff p 6
    v4 <- peekByteOff p 8
    return $ C'hci_version v0 v1 v2 v3 v4
  poke p (C'hci_version v0 v1 v2 v3 v4) = do
    pokeByteOff p 0 v0
    pokeByteOff p 2 v1
    pokeByteOff p 4 v2
    pokeByteOff p 6 v3
    pokeByteOff p 8 v4
    return ()

{-# LINE 42 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_open_dev" c'hci_open_dev
  :: CInt -> IO CInt
foreign import ccall "&hci_open_dev" p'hci_open_dev
  :: FunPtr (CInt -> IO CInt)

{-# LINE 43 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_close_dev" c'hci_close_dev
  :: CInt -> IO CInt
foreign import ccall "&hci_close_dev" p'hci_close_dev
  :: FunPtr (CInt -> IO CInt)

{-# LINE 44 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_send_cmd" c'hci_send_cmd
  :: CInt -> CUShort -> CUShort -> CUChar -> Ptr () -> IO CInt
foreign import ccall "&hci_send_cmd" p'hci_send_cmd
  :: FunPtr (CInt -> CUShort -> CUShort -> CUChar -> Ptr () -> IO CInt)

{-# LINE 45 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_send_req" c'hci_send_req
  :: CInt -> Ptr C'hci_request -> CInt -> IO CInt
foreign import ccall "&hci_send_req" p'hci_send_req
  :: FunPtr (CInt -> Ptr C'hci_request -> CInt -> IO CInt)

{-# LINE 46 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_create_connection" c'hci_create_connection
  :: CInt -> Ptr C'bdaddr_t -> CUShort -> CUShort -> CUChar -> Ptr CUShort -> CInt -> IO CInt
foreign import ccall "&hci_create_connection" p'hci_create_connection
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CUShort -> CUShort -> CUChar -> Ptr CUShort -> CInt -> IO CInt)

{-# LINE 47 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_disconnect" c'hci_disconnect
  :: CInt -> CUShort -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_disconnect" p'hci_disconnect
  :: FunPtr (CInt -> CUShort -> CUChar -> CInt -> IO CInt)

{-# LINE 48 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_inquiry" c'hci_inquiry
  :: CInt -> CInt -> CInt -> Ptr CUChar -> Ptr (Ptr C'inquiry_info) -> CLong -> IO CInt
foreign import ccall "&hci_inquiry" p'hci_inquiry
  :: FunPtr (CInt -> CInt -> CInt -> Ptr CUChar -> Ptr (Ptr C'inquiry_info) -> CLong -> IO CInt)

{-# LINE 49 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_devinfo" c'hci_devinfo
  :: CInt -> Ptr C'hci_dev_info -> IO CInt
foreign import ccall "&hci_devinfo" p'hci_devinfo
  :: FunPtr (CInt -> Ptr C'hci_dev_info -> IO CInt)

{-# LINE 50 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_devba" c'hci_devba
  :: CInt -> Ptr C'bdaddr_t -> IO CInt
foreign import ccall "&hci_devba" p'hci_devba
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> IO CInt)

{-# LINE 51 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_devid" c'hci_devid
  :: CString -> IO CInt
foreign import ccall "&hci_devid" p'hci_devid
  :: FunPtr (CString -> IO CInt)

{-# LINE 52 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_local_name" c'hci_read_local_name
  :: CInt -> CInt -> CString -> CInt -> IO CInt
foreign import ccall "&hci_read_local_name" p'hci_read_local_name
  :: FunPtr (CInt -> CInt -> CString -> CInt -> IO CInt)

{-# LINE 53 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_local_name" c'hci_write_local_name
  :: CInt -> CString -> CInt -> IO CInt
foreign import ccall "&hci_write_local_name" p'hci_write_local_name
  :: FunPtr (CInt -> CString -> CInt -> IO CInt)

{-# LINE 54 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_remote_name" c'hci_read_remote_name
  :: CInt -> Ptr C'bdaddr_t -> CInt -> CString -> CInt -> IO CInt
foreign import ccall "&hci_read_remote_name" p'hci_read_remote_name
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CInt -> CString -> CInt -> IO CInt)

{-# LINE 55 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_remote_name_with_clock_offset" c'hci_read_remote_name_with_clock_offset
  :: CInt -> Ptr C'bdaddr_t -> CUChar -> CUShort -> CInt -> CString -> CInt -> IO CInt
foreign import ccall "&hci_read_remote_name_with_clock_offset" p'hci_read_remote_name_with_clock_offset
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CUChar -> CUShort -> CInt -> CString -> CInt -> IO CInt)

{-# LINE 56 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_remote_name_cancel" c'hci_read_remote_name_cancel
  :: CInt -> Ptr C'bdaddr_t -> CInt -> IO CInt
foreign import ccall "&hci_read_remote_name_cancel" p'hci_read_remote_name_cancel
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CInt -> IO CInt)

{-# LINE 57 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_remote_version" c'hci_read_remote_version
  :: CInt -> CUShort -> Ptr C'hci_version -> CInt -> IO CInt
foreign import ccall "&hci_read_remote_version" p'hci_read_remote_version
  :: FunPtr (CInt -> CUShort -> Ptr C'hci_version -> CInt -> IO CInt)

{-# LINE 58 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_remote_features" c'hci_read_remote_features
  :: CInt -> CUShort -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_remote_features" p'hci_read_remote_features
  :: FunPtr (CInt -> CUShort -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 59 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_remote_ext_features" c'hci_read_remote_ext_features
  :: CInt -> CUShort -> CUChar -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_remote_ext_features" p'hci_read_remote_ext_features
  :: FunPtr (CInt -> CUShort -> CUChar -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 60 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_clock_offset" c'hci_read_clock_offset
  :: CInt -> CUShort -> Ptr CUShort -> CInt -> IO CInt
foreign import ccall "&hci_read_clock_offset" p'hci_read_clock_offset
  :: FunPtr (CInt -> CUShort -> Ptr CUShort -> CInt -> IO CInt)

{-# LINE 61 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_local_version" c'hci_read_local_version
  :: CInt -> Ptr C'hci_version -> CInt -> IO CInt
foreign import ccall "&hci_read_local_version" p'hci_read_local_version
  :: FunPtr (CInt -> Ptr C'hci_version -> CInt -> IO CInt)

{-# LINE 62 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_local_commands" c'hci_read_local_commands
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_local_commands" p'hci_read_local_commands
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 63 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_local_features" c'hci_read_local_features
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_local_features" p'hci_read_local_features
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 64 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_local_ext_features" c'hci_read_local_ext_features
  :: CInt -> CUChar -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_local_ext_features" p'hci_read_local_ext_features
  :: FunPtr (CInt -> CUChar -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 65 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_bd_addr" c'hci_read_bd_addr
  :: CInt -> Ptr C'bdaddr_t -> CInt -> IO CInt
foreign import ccall "&hci_read_bd_addr" p'hci_read_bd_addr
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CInt -> IO CInt)

{-# LINE 66 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_class_of_dev" c'hci_read_class_of_dev
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_class_of_dev" p'hci_read_class_of_dev
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)
